# vanilla_btc_wallet

./: .gitignore  Cargo.toml  README.MD  private_key.json
src/: btc_menu.rs  main.rs
