[package]
name = "BTCWallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitcoin = "0.29.1"
getrandom = "0.2.7"
hkdf = "0.12.3"
secp256k1 = { version = "0.20.3", features = ["rand"] }
dotenv = "0.15.0"
hex = "0.4.3"
anyhow = "1.0"
rand = {version = "0.6", features = ["std"]}
serde_json = "1.0"

sha256 = "1.0.3"
ripemd = "0.1.3"
whirlpool = "0.10.4"
sha2 = "0.10.6"
hex-literal = "0.3.4"
bs58 = "0.4.0"
base16 = "*"
